--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "build:dev": "webpack",
+    "start": "node server/server.js",
     "build:prod": "webpack -p --env production"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
     "live-server": "^1.2.0",
