--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "Tal Goldberg",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "build:dev": "webpack",
     "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod",
     "build:prod": "webpack -p --env production"
   },
   "dependencies": {
@@ -21,13 +21,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "jest": "20.0.4",
-    "live-server": "^1.2.0",
     "moment": "2.18.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
@@ -39,13 +35,18 @@
     "react-modal": "^3.1.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "4.2.2",
-    "react-test-renderer": "^16.0.0",
     "redux": "3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
+  },
+  "devDependencies": {
+    "enzyme": "3.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "^16.0.0",
     "webpack-dev-server": "2.5.1"
   }
 }
